--- a/PS0.ipynb
+++ b/PS0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUwAg+ZaWrKI2aTKPSojXC",
+      "authorship_tag": "ABX9TyP2/PGyV5dA1T88i9auaYTF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,47 @@
         "id": "O485bWoQ_Fk3"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "\n",
+        "!pip install geopandas==1.0.1\n",
+        "!pip install mapclassify\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, zipfile #basics\n",
+        "import pandas as pd #data management\n",
+        "import matplotlib.pyplot as plt #visualization library\n",
+        "import geopandas as gpd #gis/maps library\n",
+        "\n",
+        "import mapclassify\n",
+        "\n",
+        "#will display all output not just last command\n",
+        "from IPython.core.interactiveshell import InteractiveShell\n",
+        "InteractiveShell.ast_node_interactivity = \"all\"\n",
+        "\n",
+        "from google.colab import files #to download from colab onto hd\n",
+        "\n",
+        "from google.colab import data_table\n",
+        "data_table.enable_dataframe_formatter() #this enables spreadsheet view upon calling dataframe\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wamKXAedAGQ6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zamlLuBcBSQ2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
