--- a/PS0.ipynb
+++ b/PS0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2/PGyV5dA1T88i9auaYTF",
+      "authorship_tag": "ABX9TyMcBgqkONsgNZ21tAzUxYNL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,9 +68,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "! wget -q -O pr-counties.zip https://docs.google.com/uc?id=1xJDhcRCkgv7k4tNCa72Oog5bohV6dTB2&export=download\n",
+        "\n",
+        "zip_ref = zipfile.ZipFile('pr-counties.zip', 'r'); zip_ref.extractall(); zip_ref.close() #just unzipping\n",
+        "prC0=gpd.read_file('tl_2019_72_subbarrio.shp') #load the shapefile with gpd as prC\n"
+      ],
       "metadata": {
         "id": "zamlLuBcBSQ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prC0.plot()"
+      ],
+      "metadata": {
+        "id": "Sl9wr9NxFxbl"
       },
       "execution_count": null,
       "outputs": []
