--- a/FoundationsH2.ipynb
+++ b/FoundationsH2.ipynb
@@ -82,21 +82,61 @@
         "  \"\"\"Returns the percentage of lines in a text file containing substring\n",
         "\n",
         "\n",
-        "  The builtinopen function can be used to open a text file for reading from or\n",
-        "  writing into the file. The resulting object allows us to get an iterable\n",
-        "  collection of lines in the file.\n",
-        "\n",
-        "\n",
         "  Args:\n",
         "  filename (str): text file in the same folder as this module\n",
         "  sub (str): substring\n",
+        "  \"\"\"\n",
         "\n",
         "\n",
-        "  Returns:\n",
-        "  int\n",
+        "total_lines = 0\n",
+        "matching_lines = 0\n",
         "\n",
         "\n",
-        "  pass\n",
+        "with open(filename, 'r') as file:\n",
+        "for line in file:\n",
+        "total_lines +=\n",
+        "1\n",
+        "if substring in line\n",
+        "matching_lines\n",
+        "+= 1\n",
+        "\n",
+        "\n",
+        "if\n",
+        "\n",
+        "\n",
+        "total_lines\n",
+        "return 0.0\n",
+        "\n",
+        "\n",
+        "==\n",
+        "\n",
+        "\n",
+        "0:\n",
+        "\n",
+        "\n",
+        "return\n",
+        "\n",
+        "\n",
+        "(matching_lines\n",
+        "\n",
+        "\n",
+        "total_lines)\n",
+        "\n",
+        "\n",
+        "100\n",
+        "\n",
+        "\n",
+        "if\n",
+        "\n",
+        "\n",
+        "name,\n",
+        "main\n",
+        "==\n",
+        "filename = \"text.txt\"\n",
+        "substring = \"example\"\n",
+        "percentage = substring_percentage(filename, substring)\n",
+        "print(f\"Percentage of lines containing 'isubstring)': (percentage:.2fr%\")\n",
+        "\n",
         "\n",
         "\n",
         "\n",
