--- a/FoundationsH2.ipynb
+++ b/FoundationsH2.ipynb
@@ -87,50 +87,25 @@
         "  sub (str): substring\n",
         "  \"\"\"\n",
         "\n",
+        "\n",
         "  total_lines = 0\n",
         "  matching_lines = 0\n",
         "\n",
         "\n",
         "  with open(filename, 'r') as file:\n",
-        "  for line in file:\n",
-        "  total_lines +=\n",
-        "  1\n",
-        "  if substring in line\n",
-        "  matching_lines\n",
-        "  += 1\n",
+        "    for line in file:\n",
+        "        total_lines +=1\n",
+        "        if substring in line:\n",
+        "          matching_lines += 1\n",
+        "\n",
+        "  if total_lines == 0:\n",
+        "    return 0.0\n",
         "\n",
         "\n",
-        "  if\n",
+        "  return (matching_lines / total_lines) * 100\n",
         "\n",
         "\n",
-        "  total_lines\n",
-        "  return 0.0\n",
-        "\n",
-        "\n",
-        "  ==\n",
-        "\n",
-        "\n",
-        "  0:\n",
-        "\n",
-        "\n",
-        "  return\n",
-        "\n",
-        "\n",
-        "  (matching_lines\n",
-        "\n",
-        "\n",
-        "  total_lines)\n",
-        "\n",
-        "\n",
-        "  100\n",
-        "\n",
-        "\n",
-        "  if\n",
-        "\n",
-        "\n",
-        "  name,\n",
-        "  main\n",
-        "  ==\n",
+        "if __name__ == \"__main__\":\n",
         "  filename = \"text.txt\"\n",
         "  substring = \"example\"\n",
         "  percentage = substring_percentage(filename, substring)\n",
