--- a/FoundationsH2.ipynb
+++ b/FoundationsH2.ipynb
@@ -112,7 +112,132 @@
         "  print(f\"Percentage of lines containing 'isubstring)': (percentage:.2fr%\")\n",
         "\n",
         "\n",
+        "def\n",
         "\n",
+        "\n",
+        "count_substring_per_chapter(file_name, substring):\n",
+        "\"\"\"Counts the occurrences of a substring in each chapter\n",
+        "\n",
+        "\n",
+        "of a\n",
+        "\n",
+        "\n",
+        "text\n",
+        "\n",
+        "\n",
+        "file.\n",
+        "\n",
+        "\n",
+        "Args:\n",
+        "file name\n",
+        "substring\n",
+        "\n",
+        "\n",
+        "The\n",
+        "The\n",
+        "\n",
+        "\n",
+        "name of the text file.\n",
+        "substring to search for\n",
+        "\n",
+        "\n",
+        "with open(file_name\n",
+        "chapter_num 1\n",
+        "chapter_count\n",
+        "\n",
+        "\n",
+        "r')\n",
+        "\n",
+        "\n",
+        "as\n",
+        "\n",
+        "\n",
+        "file:\n",
+        "\n",
+        "\n",
+        "for\n",
+        "\n",
+        "\n",
+        "line in file:\n",
+        "if line.startswith(\"Chapter\")\n",
+        "if chapter_num > 1:\n",
+        "print(f\"Chapter fchapter\n",
+        "chapter_num\n",
+        "T\n",
+        "\n",
+        "\n",
+        "# Assuming\n",
+        "\n",
+        "\n",
+        "chapters\n",
+        "\n",
+        "\n",
+        "start with\n",
+        "\n",
+        "\n",
+        "\"Che\n",
+        "\n",
+        "\n",
+        "num\n",
+        "\n",
+        "\n",
+        "13:\n",
+        "\n",
+        "\n",
+        "fchapter_count)\")\n",
+        "\n",
+        "\n",
+        "-\n",
+        "\n",
+        "\n",
+        "chapter_count\n",
+        "\n",
+        "\n",
+        "=\n",
+        "\n",
+        "\n",
+        "chapter.\n",
+        "\n",
+        "\n",
+        "count\n",
+        "\n",
+        "\n",
+        "line.count(substring)\n",
+        "\n",
+        "\n",
+        "+ニ\n",
+        "\n",
+        "\n",
+        "print(f\"Chapter\n",
+        "\n",
+        "\n",
+        "(chapter_num\n",
+        "\n",
+        "\n",
+        "1): :\n",
+        "\n",
+        "\n",
+        "(chapter_count-\")\n",
+        "\n",
+        "\n",
+        "# Print\n",
+        "\n",
+        "\n",
+        "count\n",
+        "\n",
+        "\n",
+        "fo.\n",
+        "\n",
+        "\n",
+        "if\n",
+        "\n",
+        "\n",
+        "name_\n",
+        "==\n",
+        "main\n",
+        "file_name = \"your_text_file.txt\" # Replace with your file name\n",
+        "substring = \"your_substring\" # Replace with your substring\n",
+        "count_substring_per_chapter (file_name, substring)\n",
         "\n",
         "\n"
       ]
