--- a/PS1_Copy.ipynb
+++ b/PS1_Copy.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "outputId": "06f12154-6e2e-4b65-9a70-9017f5af666f"
+        "outputId": "c1c4db28-d14e-4f37-c9f6-19582b8553a1"
       },
       "outputs": [
         {
@@ -58,16 +58,16 @@
             "Requirement already satisfied: networkx>=2.7 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (3.3)\n",
             "Requirement already satisfied: numpy>=1.23 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (1.26.4)\n",
             "Requirement already satisfied: pandas!=1.5.0,>=1.4 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (2.1.4)\n",
-            "Requirement already satisfied: scikit-learn>=1.0 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (1.3.2)\n",
+            "Requirement already satisfied: scikit-learn>=1.0 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (1.5.2)\n",
             "Requirement already satisfied: scipy>=1.8 in /usr/local/lib/python3.10/dist-packages (from mapclassify) (1.13.1)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas!=1.5.0,>=1.4->mapclassify) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas!=1.5.0,>=1.4->mapclassify) (2024.2)\n",
             "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas!=1.5.0,>=1.4->mapclassify) (2024.1)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=1.0->mapclassify) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=1.0->mapclassify) (3.5.0)\n",
+            "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=1.0->mapclassify) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=1.0->mapclassify) (3.5.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.2->pandas!=1.5.0,>=1.4->mapclassify) (1.16.0)\n",
             "Downloading mapclassify-2.8.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.9/58.9 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.9/58.9 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: mapclassify\n",
             "Successfully installed mapclassify-2.8.0\n"
           ]
@@ -171,10 +171,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 483
+          "height": 479
         },
         "id": "Sl9wr9NxFxbl",
-        "outputId": "98cf9ecd-ce11-481b-ec19-6a5569b66ad2"
+        "outputId": "c53d9030-b35e-449d-f274-0ad08de76735"
       },
       "execution_count": 4,
       "outputs": [
@@ -264,6 +264,7 @@
       "cell_type": "code",
       "source": [
         "prC0.dtypes\n",
+        "#prC0.head(30)\n",
         "#prC0.head()\n",
         "#prC0.tail()\n",
         "#prC0.shape\n",
@@ -273,12 +274,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 241
         },
         "id": "2E6SDM8RL6Q1",
-        "outputId": "31401e3c-54ec-4567-ff8d-9efc91fb445f"
+        "outputId": "912ab670-d754-4966-872a-4431ff637b2c"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -371,7 +372,7 @@
         "id": "UVGhxKrkKW83",
         "outputId": "27134284-e50b-45e0-b351-7634634a30cd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +435,7 @@
         "id": "88dfkcVWqVEr",
         "outputId": "bcd974fd-93e4-4631-eb7b-1acfc787fbef"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,7 +474,7 @@
           "height": 1213
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1149,7 +1150,7 @@
         "id": "FjWF5fARroL4",
         "outputId": "9f78190f-fcd1-41e5-fe3e-b0ae6fdd12b6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1189,7 @@
           "height": 907
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
