--- a/PS1_Final.ipynb
+++ b/PS1_Final.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "O485bWoQ_Fk3",
         "colab": {
@@ -83,6 +83,12 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "I want to collect population data from Puerto Rico, the place where I was born and raised. The island has faced natural disasters, corruption, mismanagement by local government, and mass emigration that has resulted in a critical loss of professionals and has essentially reduced the island’s student population to levels I never imagined. I myself emigrated after finishing college in search of better job opportunities.\n",
         "\n",
         "As indicated by the State Data Center of Puerto Rico’s website (https://censo.estadisticas.pr/), the population has been declining for decades and the pace has accelerated in recent years. The exodus, which includes a large portion of young people, has accelerated the aging of the population. I have even noticed this personally when I visit the island; my village is mostly occupied by people over 50 years old. As a direct consequence, the birth rate is also low. The government has also closed many schools due to the drop in student numbers and as an austerity measure in the face of the economic crisis.\n",
@@ -91,6 +97,37 @@
       ],
       "metadata": {
         "id": "WDudH4KzOh3L"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **TITLE**\n",
+        "\n",
+        "### *Exploring Population Rates, Employment, and Demographic Data: A GIS Project in Puerto Rico*\n",
+        "\n",
+        "\n",
+        "#**DESCRIPTION**\n",
+        "\n",
+        "### *The primary objective of this project is ....*\n",
+        "\n",
+        "#**DATASET SOURCES**\n",
+        "\n",
+        "### Population Density Data:\n",
+        "\n",
+        "#### https://censo.estadisticas.pr/EstimadosPoblacionales\n",
+        "\n",
+        "## Employment Data:\n",
+        "\n",
+        "#### https://indicadores.pr/dataset/tasa-desempleo-municipio-area/resource/8de254b0-b769-4a4e-b145-9a6975369b91\n",
+        "\n",
+        "## Demographic Data:\n",
+        "\n",
+        "#### https://censo.estadisticas.pr/node/520\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hCokap_GPMuC"
       }
     },
     {
@@ -124,7 +161,7 @@
       "metadata": {
         "id": "wamKXAedAGQ6"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +187,7 @@
       "metadata": {
         "id": "zamlLuBcBSQ2"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +203,7 @@
       "metadata": {
         "id": "P2bZNzx6JdLb"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +235,7 @@
         "id": "Sl9wr9NxFxbl",
         "outputId": "927f939a-9335-4fc3-a229-f826bdbcfceb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +338,7 @@
         "id": "2E6SDM8RL6Q1",
         "outputId": "72fb3239-b273-42aa-c977-ce4e4e993033"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +585,7 @@
       "metadata": {
         "id": "Yb6PadPIPLzy"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +600,7 @@
       "metadata": {
         "id": "3ffR3U3i-hV-"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -590,7 +627,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +655,7 @@
       "metadata": {
         "id": "-Hr7Ise06Zlr"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +673,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +705,7 @@
         "id": "g4myxu62pW6e",
         "outputId": "76ed42db-5a29-4b85-ff2c-bbbd52ea6f59"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +747,7 @@
         "id": "TW1JrREFqETl",
         "outputId": "6710e421-2870-437e-dcf1-a5dbff46f1e2"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1363,7 @@
         "id": "nm7EHEYw_WUB",
         "outputId": "f054d698-d9e2-4d28-df30-e3b33d763941"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2002,7 +2039,7 @@
       "metadata": {
         "id": "SRDFmknDd6B4"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2023,7 +2060,7 @@
         "id": "khsxbBlLDYsk",
         "outputId": "ade55c80-ff9d-463b-80b2-d605b4ce38ad"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2800,7 +2837,7 @@
         "id": "FhOviwjTEiCs",
         "outputId": "7fbfe5d0-00b7-47de-a6db-0d00dc60cef4"
       },
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2873,7 +2910,7 @@
         "id": "xMPqXYK1Hwm7",
         "outputId": "64897a0d-5028-4f2e-9471-c8100b5edf3d"
       },
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2946,7 +2983,7 @@
         "id": "XmFEBLbNHy_Q",
         "outputId": "7b16ca72-b987-4a27-93ef-01bf33ea5ae7"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3017,7 +3054,7 @@
         "id": "hTnK7l5PWiWF",
         "outputId": "b17972bc-96ad-4ab6-db5c-36d10497de01"
       },
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3088,7 +3125,7 @@
         "id": "zeMzFQQUWkKG",
         "outputId": "1d0b11d0-039b-4c8e-a173-0a2b81e7d61a"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
