--- a/PS2.ipynb
+++ b/PS2.ipynb
@@ -181,10 +181,7 @@
         "#! wget -q -O pr-counties.zip https://data.humdata.org/dataset/e71a08a7-8529-4964-9ad7-7319e6ec05f8/resource/d3b8f932-16cf-4ecb-89b8-c2611922fcb4/download/pri_adm_2019_shp.zip\n",
         "\n",
         "# I saved the file on Google Drive and created the link below:\n",
-        "! wget -q -O pr-counties.zip https://drive.google.com/uc?id=14I-sv4Q-3oCtdNXerqPGJZ9QkG37b48C&export=download\n",
         "\n",
-        "zip_ref = zipfile.ZipFile('pr-counties.zip', 'r'); zip_ref.extractall(); zip_ref.close() #just unzipping\n",
-        "prC0=gpd.read_file('original/pri_admbnda_adm1_2019.shp') #load the shapefile with gpd as prC\n",
         "prC1=gpd.read_file('original/pri_admbndl_ALL_2019.shp') #load the shapefile with gpd as prC\n",
         "\n",
         "\n"
@@ -3119,66 +3116,93 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "\n",
         "import geopandas as gpd\n",
         "import folium\n",
-        "from PIL import Image\n",
-        "import base64\n",
-        "from io import BytesIO\n",
         "import os\n",
         "\n",
         "def create_interactive_map(shapefile_path, images_folder):\n",
-        "    # Load the shapefile\n",
+        "    # Read the shapefile\n",
         "    gdf = gpd.read_file(shapefile_path)\n",
         "\n",
-        "    # Create a folium map centered around the shapefile's centroid\n",
-        "    m = folium.Map(location=[gdf.geometry.centroid.y.mean(), gdf.geometry.centroid.x.mean()], zoom_start=10)\n",
+        "    # Create a map centered around the shapefile's centroid\n",
+        "    centroid = gdf.geometry.centroid.iloc[0]\n",
+        "    m = folium.Map(location=[centroid.y, centroid.x], zoom_start=10)\n",
         "\n",
-        "    # Function to encode image to base64\n",
-        "    def encode_image(image_path):\n",
-        "        img = Image.open(image_path)\n",
-        "        buffered = BytesIO()\n",
-        "        img.save(buffered, format=\"PNG\")\n",
-        "        img_str = base64.b64encode(buffered.getvalue()).decode()\n",
-        "        return img_str\n",
+        "    # Create a dictionary to map town names to image paths\n",
+        "    image_dict = {}\n",
+        "    for image_name in os.listdir(images_folder):\n",
+        "        town_name = os.path.splitext(image_name)[0]\n",
+        "        image_dict[town_name] = os.path.join(images_folder, image_name)\n",
         "\n",
-        "    # Function to add shapefile data with hover functionality\n",
-        "    def add_shapefile_with_hover(gdf, map_obj, images_folder):\n",
-        "        for _, row in gdf.iterrows():\n",
-        "            town_name = row['ADM1_ES']\n",
-        "            image_path = os.path.join(images_folder, f\"{town_name}.png\")\n",
-        "            if os.path.exists(image_path):\n",
-        "                img_str = encode_image(image_path)\n",
-        "                popup_content = f'<img src=\"data:image/png;base64,{img_str}\" width=\"200\" height=\"200\">'\n",
-        "            else:\n",
-        "                popup_content = \"No image available\"\n",
+        "    # Add each town to the map\n",
+        "    for _, row in gdf.iterrows():\n",
+        "        town_name = row['ADM1_ES']\n",
+        "        if town_name in image_dict:\n",
+        "            image_path = image_dict[town_name]\n",
+        "            popup_html = f'<img src=\"file://{image_path}\" width=\"200\" height=\"150\">'\n",
+        "            folium.Marker(\n",
+        "                location=[row.geometry.centroid.y, row.geometry.centroid.x],\n",
+        "                popup=folium.Popup(popup_html, max_width=200)\n",
+        "            ).add_to(m)\n",
         "\n",
-        "            sim_geo = gpd.GeoSeries(row['geometry']).simplify(tolerance=0.001)\n",
-        "            geo_j = sim_geo.to_json()\n",
-        "            geo_j = folium.GeoJson(\n",
-        "                data=geo_j,\n",
-        "                style_function=lambda x: {'fillColor': 'orange'},\n",
-        "                tooltip=folium.GeoJsonTooltip(fields=['ADM1_ES'], aliases=['Town:']),\n",
-        "                popup=folium.Popup(popup_content)\n",
-        "            )\n",
-        "            geo_j.add_to(map_obj)\n",
+        "    return m\n",
         "\n",
-        "    # Add shapefile data with hover functionality to the map\n",
-        "    add_shapefile_with_hover(gdf, m, images_folder)\n",
+        "import gdown\n",
         "\n",
-        "    # Save the map to an HTML file\n",
-        "    m.save('map_with_hover.html')\n",
+        "# URL of the Google Drive folder\n",
+        "folder_url = 'https://drive.google.com/uc?id=1a9PTv8dBokWF-859KZ7c5UZ2V5mUbvmn&export=download'\n",
+        "\n",
+        "download_folder = 'downloaded_images'\n",
+        "\n",
+        "# Download the folder\n",
+        "gdown.download_folder(folder_url, output=download_folder, quiet=True, use_cookies=False)\n",
         "\n",
         "# Example usage\n",
-        "#create_interactive_map('path/to/merged_shapefile.shp', 'path/to/images_folder')\n",
+        "shapefile_path = 'merged_shapefile.shp'\n",
+        "images_folder = download_folder\n",
+        "interactive_map = create_interactive_map(shapefile_path, images_folder)\n",
+        "interactive_map.save('interactive_map.html')\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Example usage\n",
+        "#create_interactive_map('merged_shapefile.shp', 'https://drive.google.com/drive/folders/1a9PTv8dBokWF-859KZ7c5UZ2V5mUbvmn?usp=drive_link')\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "l_Yhwsf9MNp1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 422
+        },
+        "id": "l_Yhwsf9MNp1",
+        "outputId": "99df1772-e05d-4db9-9ba6-90950ba94dd8"
       },
-      "execution_count": 50,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Failed to retrieve folder contents\n",
+            "<ipython-input-72-54174836c6fd>:10: UserWarning: Geometry is in a geographic CRS. Results from 'centroid' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
+            "\n",
+            "  centroid = gdf.geometry.centroid.iloc[0]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'downloaded_images'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-72-54174836c6fd>\u001b[0m in \u001b[0;36m<cell line: 45>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0mshapefile_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'merged_shapefile.shp'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0mimages_folder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdownload_folder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m \u001b[0minteractive_map\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_interactive_map\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapefile_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0minteractive_map\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'interactive_map.html'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-72-54174836c6fd>\u001b[0m in \u001b[0;36mcreate_interactive_map\u001b[0;34m(shapefile_path, images_folder)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# Create a dictionary to map town names to image paths\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mimage_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mimage_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0mtown_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mimage_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtown_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages_folder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'downloaded_images'"
+          ]
+        }
+      ]
     }
   ]
 }
